[package]
name = "kvs"
version = "0.1.0"
authors = ["Pu Ruokun <hughpu@hotmail.com>"]
description = "A key-value store for exersise"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.6"
walkdir = "2.3"
