[package]
name = "kvs"
version = "0.3.0"
authors = ["Pu Ruokun <hughpu@hotmail.com>"]
description = "A key-value store for exersise"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
slog = "2.7.0"
slog-term = "2.9.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.6"
walkdir = "2.3"
criterion = "0.3"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"

[[bench]]
name = "kvs_benchmark"
harness = false
